--- a/style.css
+++ b/style.css
@@ -70,6 +70,44 @@
  }
  .about-title{
     text-align: center;
-    padding:15px;
+    padding:25px;
     font-size: 50px;
+   
  }
+ .about-container{
+    height:75vh
+ }
+ .box{
+    background-color: black;
+    height:200px;
+    width:240px;
+   text-align: center;
+padding: 20px;
+box-shadow: 5px 5px 5px  rgb(71, 71, 71);
+border-radius: 5px;
+ }
+.icon{
+   
+    width: 50px;
+    height: 50px;
+    
+}
+.box-title{
+    color:white;
+}
+.box-description{
+    font-size: 16px;
+    padding: 5px;
+    color: white;
+    margin-bottom: 10px;
+}
+.service-container{
+    display: flex;
+    justify-content: space-around;
+    padding:20px;
+   
+}
+.services{
+    
+    background-image: url(./images/background.png), linear-gradient(45deg, rgb(35, 35, 35), rgb(99, 98, 99));
+}
