--- a/style.css
+++ b/style.css
@@ -46,68 +46,81 @@
     height: 100vh;
     background-image: url(./images/background.png), linear-gradient(45deg, rgb(80, 3, 66), rgb(110, 62, 110));
 }
-.title{
+
+.title {
     font-size: 55px;
     font-style: bold;
 }
-.description{
+
+.description {
     font-size: 18px;
     margin-top: 15px;
     margin-bottom: 15px;
 }
-.button{
-    padding:10px 20px;
+
+.button {
+    padding: 10px 20px;
     background-color: red;
     border: none;
     color: white;
     border-radius: 3px;
-    cursor: pointer; } 
- .about-container{
-    display:flex;
+    cursor: pointer;
+}
+
+.about-container {
+    display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: row-reverse;
- }
- .about-title{
+}
+
+.about-title {
     text-align: center;
-    padding:25px;
+    padding: 25px;
     font-size: 50px;
-   
- }
- .about-container{
-    height:75vh
- }
- .box{
+
+}
+
+.about-container {
+    height: 75vh
+}
+
+.box {
     background-color: black;
-    height:200px;
-    width:240px;
-   text-align: center;
-padding: 20px;
-box-shadow: 5px 5px 5px  rgb(71, 71, 71);
-border-radius: 5px;
- }
-.icon{
-   
+    height: 200px;
+    width: 240px;
+    text-align: center;
+    padding: 20px;
+    box-shadow: 5px 5px 5px rgb(71, 71, 71);
+    border-radius: 5px;
+}
+
+.icon {
+
     width: 50px;
     height: 50px;
-    
+
 }
-.box-title{
-    color:white;
+
+.box-title {
+    color: white;
 }
-.box-description{
+
+.box-description {
     font-size: 16px;
     padding: 5px;
     color: white;
     margin-bottom: 10px;
 }
-.service-container{
+
+.service-container {
     display: flex;
     justify-content: space-around;
-    padding:20px;
-   
+    padding: 20px;
+
 }
-.services{
-    
+
+.services {
+
     background-image: url(./images/background.png), linear-gradient(45deg, rgb(35, 35, 35), rgb(99, 98, 99));
 }
